--- a/FeedbackAnalytics/HomeScreenViewController.xib
+++ b/FeedbackAnalytics/HomeScreenViewController.xib
@@ -13,8 +13,8 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeScreenViewController" customModule="FeedbackAnalytics" customModuleProvider="target">
             <connections>
                 <outlet property="calendarRangeSelectorBtn" destination="Pbq-IT-Jly" id="L9Z-qb-TqN"/>
+                <outlet property="lineChartRatingCountView" destination="VWF-6r-d4w" id="yDL-op-8mz"/>
                 <outlet property="lineChartView" destination="z11-70-XvF" id="UUs-Mw-fZE"/>
-                <outlet property="ratingAveragePieChart" destination="pYm-VC-a4I" id="ZVJ-AV-VZZ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -42,17 +42,17 @@
                                 <action selector="didCalendarTapped:" destination="-1" eventType="touchUpInside" id="ONG-zV-Vcy"/>
                             </connections>
                         </button>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pYm-VC-a4I" userLabel="PieChart" customClass="PieChartView" customModule="Charts">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z11-70-XvF" customClass="LineChartView" customModule="Charts">
                             <rect key="frame" x="0.0" y="55" width="365" height="288.5"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z11-70-XvF" customClass="LineChartView" customModule="Charts">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VWF-6r-d4w" userLabel="Line Chart View Count" customClass="LineChartView" customModule="Charts">
                             <rect key="frame" x="0.0" y="348.5" width="365" height="288.5"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="z11-70-XvF" firstAttribute="height" secondItem="pYm-VC-a4I" secondAttribute="height" id="av2-I3-oPl"/>
+                        <constraint firstItem="VWF-6r-d4w" firstAttribute="height" secondItem="z11-70-XvF" secondAttribute="height" id="wvR-Wi-a0E"/>
                     </constraints>
                 </stackView>
             </subviews>
